k8s_sdc_gke/auth-sdc-host-based.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: datacollector-service-one
    namespace: streamsets
  spec:
    type: NodePort
    ports:
    - name: iot
      port: 18636
      targetPort: 18630
      protocol: TCP
    selector:
      app: auth-sdc-317
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: datacollector-ingress-one
    namespace: streamsets
    annotations:
      kubernetes.io/ingress.class: traefik
  spec:
    rules:
    - host:
      http:
        paths:
        - path: /
          backend:
            serviceName: datacollector-service-one
            servicePort: 18636
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: datacollector-deployment-one
    namespace: streamsets
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: auth-sdc-317
    template:
      metadata:
        labels:
          app: auth-sdc-317
      spec:
        containers:
        - name: datacollector
          image: streamsets/datacollector:3.17.1
          ports:
          - containerPort: 18630
